Fixed wrapping

--- a/styles/sass/base/_variables.scss
+++ b/styles/sass/base/_variables.scss
@@ -16,9 +16,9 @@ $footer-height: 30px;
 $header-bottom-line: $header-height / 5;
 $lecture-schedule-combination-controller-height: 100px;
 $lecture-schedule-height: 560px;
-$lecture-schedule-basis: 360px;
+$lecture-schedule-basis: 430px;
 $lecture-explorer-height: $lecture-schedule-height;
-$lecture-explorer-basis: 300px;
+$lecture-explorer-basis: 330px;
 $lecture-schedule-plan-buttons-min-width: 100px;
 $lecture-schedule-plan-buttons-max-width: 30%;
 $lecture-explorer-plan-buttons-height: 36px;
